--- a/MauiApp4/MainPage.xaml
+++ b/MauiApp4/MainPage.xaml
@@ -1,36 +1,67 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:drawables="clr-namespace:MauiApp4.Drawables"
              x:Class="MauiApp4.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
 
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
+    <ContentPage.Resources>
+        <drawables:ClockDrawable x:Key="clockDrawable"/>
+    </ContentPage.Resources>
 
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+    <VerticalStackLayout>
+
+        <HorizontalStackLayout
+                HorizontalOptions="Center"
+                Spacing="10">
 
             <Button
+                Text="Click to start"
                 x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
-        </VerticalStackLayout>
-    </ScrollView>
+                Clicked="OnCounterClicked">
+            </Button>
+
+            <Button
+                Text="Button2">
+            </Button>
+
+            <Button
+                Text="Button3">
+            </Button>
+
+            <Entry
+                x:Name="XingerName"
+                Text=""
+                Placeholder="Enter xinger name"
+                Completed="OnEntryCompleted"
+                MaxLength="20">
+                
+            </Entry>
+
+        </HorizontalStackLayout>
+
+        <GraphicsView Drawable="{StaticResource clockDrawable}"
+            HorizontalOptions="Center"
+            x:Name="ClockGraphicsView"
+            HeightRequest="400"
+            WidthRequest="300">
+        </GraphicsView>
+
+
+        <Label Text=""
+            x:Name="XingerNameLabel"
+            BackgroundColor="Gray"
+            HorizontalOptions="Center" />
+        <Label Text=""
+            BackgroundColor="Gray"
+            HorizontalOptions="Center" />
+        <Label Text="End"
+            BackgroundColor="Gray"
+            HorizontalOptions="Center" />
+
+    </VerticalStackLayout>
+
+
+
 
 </ContentPage>
